--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <h1>AGNI Paridhan... <br>
 Splashing Colour in your Life
 </H1>
-</div></body>
+</div>
+  <div>
+  website Under Progress......</div>
+  <div>Inconvience regretted</div>
+</body>
 </html>
