--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
 <title>Agni Paridhan</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/AP.css">
+<link href="https://fonts.googleapis.com/css?family=Sansita+One" rel="stylesheet"> 
 </head>
 <body>
 
 <header>
 <nav id="header-nav" class="navbar navbar-default">
-<div class="container">
-<div class="navbar-header">
-<a href="index.html" class="pull-left visible-md visible-lg">
-<div id="logo-img"></div>
-</a>
-<div class="navbar-brand">
-<a href="index.html"><h1>AGNI PARIDHAN</h1></a>
-<p>
-<span>Splashing color in your LIFE</span>
-</p>
-</div>
-</div>
-</div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+    	<a href="index.html" class="pull-left visible-md visible-lg">
+    		<div id="logo-img" alt="Logo image"></div>
+    	</a>
+    	<div class="navbar-brand">
+    		<a href="index.html"><h1>Agni Paridhan</h1></a>
+    		<p>
+    			<span>Splash colours in your life...</span>
+    		</p>
+    		
+    	</div>
+    </div>
+  </div>
 </nav>
 </header>
  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
 </body>
