--- a/index.html
+++ b/index.html
@@ -30,11 +30,35 @@
     		</p>
     		
     	</div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
     </div>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="men-cate.html">
+                <div id="man-img" alt="Logo image"></div><br class="hidden-xs"> MEN </a>
+            </li>
+            <li>
+              <a href="women-cate.html">
+                <div id="woman-img" alt="Logo image"></div><br class="hidden-xs"> WOMEN </a>
+            </li>
+            <li>
+              <a href="kids-cate.html">
+                <div id="kids-img" alt="Logo image"></div><br class="hidden-xs"> KIDS </a>
+            </li>
+          </ul>
+        </div>
+
   </div>
 </nav>
 </header>
-<div class="container">
+<div class="container-fluid">
 	 <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
