--- a/index.html
+++ b/index.html
@@ -94,8 +94,6 @@
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
         </div>
-      </div>
-
       <div class="item">
         <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
@@ -103,8 +101,8 @@
           <p>Beatiful flowers in Kolymbari, Crete.</p>
         </div>
       </div>
-  
-    </div>
+      </div>
+
 
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -118,5 +116,30 @@
   </div>
 
 </div>
+<div></div>
+ <div class="container">
+      <div id="home-tiles" class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <a href="#"><div id ="men-tile"><span>MEN</span></div>
+        </div>  
+
+     
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <a href="#"><div id ="women-tile"><span>WOMEN</span></div>
+        </div>
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+          <a href="#"><div id ="kids-tile"><span>KIDS</span></div>
+        </div>
+
+         <div class="col-md-3 col-sm-6 col-xs-12">
+          <a href="https://www.google.co.in/maps/place/Agni+Paridhan/@26.4191018,80.3901049,17z/data=!3m1!4b1!4m5!3m4!1s0x399c4119380864fb:0x5735f48dde64d486!8m2!3d26.419097!4d80.392299?hl=en" target="_blank"><div id ="map-tile">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3573.135555390592!2d80.39010494986154!3d26.419101787444667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c4119380864fb%3A0x5735f48dde64d486!2sAgni+Paridhan!5e0!3m2!1sen!2sin!4v1482257781467" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <span>MAP</span></div>
+        </div>
+
+      </div>
+  
+    </div>
 </body>
 </html>
