--- a/index.html
+++ b/index.html
@@ -72,34 +72,32 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
 
-      <div class="item active">
-        <img src="logo1.jpg" alt="" width="460" height="345">
+      <div class="item active" id="menslides">
+        <img src="logo1.jpg" alt="" >
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Mens Wear</h3>
+          
         </div>
       </div>
 
-      <div class="item">
-        <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
+      <div class="item" id="womenslides">
+        <img src="womens.jpg" alt="" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Women Wear</h3>
         </div>
       </div>
     
-      <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+      <div class="item" id="kidslides1">
+        <img src="img_flower.jpg" alt="" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <h3>Kids Wear</h3>
         </div>
-      <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        </div>
+      <div class="item" id="kidslides2">
+        <img src="img_flower2.jpg" alt="" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
-        </div>
+          <h3>Kids Wear</h3>
+       </div>
       </div>
       </div>
 
@@ -117,7 +115,7 @@
 
 </div>
 <div></div>
- <div class="container">
+ <div class="container-fluid">
       <div id="home-tiles" class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
           <a href="#"><div id ="men-tile"><span>MEN</span></div>
