--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div id="home-tiles" class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
           <a href="#"><div id ="men-tile"><span>MEN</span></div>
-        </div>  
+       </div>  
 
      
         <div class="col-md-3 col-sm-6 col-xs-12">
@@ -135,7 +135,31 @@
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3573.135555390592!2d80.39010494986154!3d26.419101787444667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c4119380864fb%3A0x5735f48dde64d486!2sAgni+Paridhan!5e0!3m2!1sen!2sin!4v1482257781467" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
           <span>MAP</span></div>
         </div>
-
+		 
+<footer class="panel-footer">
+    <div class="container">
+      <div class="row">
+        <section id="hours" class="col-sm-4">
+          <span>Hours:</span><br>
+          Tue-Sun: 10:00am - 09:00pm<br>
+          Monday Closed
+          <hr class="visible-xs">
+        </section>
+        <section id="address" class="col-sm-4">
+          <span>Address:</span><br>
+          Shop No: 7 & 8, Kapda Bazzar<br>
+          In front Of Transformer, New Sabji Mandi<br>
+          Lal Banglow, Kanpur, U.P.
+          <hr class="visible-xs">
+        </section>
+        <section id="testimonials" class="col-sm-4">
+          <p>"The best Cloth Shop in Town !"</p>
+          <p>"Amazing Dresses for ALL! Great Value!"</p>
+        </section>
+      </div>
+      <div class="text-center">&copy; Copyright Agni-Paridhan 2016</div>
+    </div>
+  </footer>
       </div>
   
     </div>
