--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <header>
 <nav id="header-nav" class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
     	<a href="index.html" class="pull-left visible-md visible-lg">
     		<div id="logo-img" alt="Logo image"></div>
@@ -58,7 +58,7 @@
   </div>
 </nav>
 </header>
-<div class="container-fluid">
+<div class="container">
 	 <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -115,7 +115,7 @@
 
 </div>
 <div></div>
- <div class="container-fluid">
+ <div class="container">
       <div id="home-tiles" class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
           <a href="#"><div id ="men-tile"><span>MEN</span></div>
